RESOLVED FIXED54427
[Chromium] Rendering error of spin buttons on layers
https://bugs.webkit.org/show_bug.cgi?id=54427
Summary [Chromium] Rendering error of spin buttons on layers
Kent Tamura
Reported 2011-02-14 19:19:18 PST
[Chromium] Rendering error of spin buttons on layers
Attachments
Patch (12.45 KB, patch)
2011-02-14 19:22 PST, Kent Tamura
fishd: review+
Kent Tamura
Comment 1 2011-02-14 19:22:52 PST
Kent Tamura
Comment 2 2011-02-15 20:14:54 PST
Note You need to log in before you can comment on or make changes to this bug.