[Chromium] Rendering error of spin buttons on layers https://bugs.webkit.org/show_bug.cgi?id=54427

Reviewed by Darin Fisher.

Source/WebCore:

Test: fast/forms/input-appearance-spinbutton-layer.html

* rendering/RenderThemeChromiumWin.cpp:
  Add checks for multiple ThemePainter instances.
(WebCore::RenderThemeChromiumWin::paintInnerSpinButton):
  Avoid to create multiple ThemePainter instances.

LayoutTests:

* fast/forms/input-appearance-spinbutton-layer.html: Added.
* platform/mac/fast/forms/input-appearance-spinbutton-layer-expected.checksum: Added.
* platform/mac/fast/forms/input-appearance-spinbutton-layer-expected.png: Added.
* platform/mac/fast/forms/input-appearance-spinbutton-layer-expected.txt: Added.
* platform/gtk/Skipped:
* platform/qt/Skipped:

Canonical link: https://commits.webkit.org/68659@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@78677 268f45cc-cd09-0410-ab3c-d52691b4dbfc